# pyexpl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  nsjail.cfg  pyproject.toml  wrapstdin.sh
src/pyexpl/: __init__.py  runners.py
src/pyexpl/static/: app.js
src/pyexpl/templates/: index.html
tests/: test_runner.py  test_sharing.py
