[project]
name = "pyexpl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mohammedgqudah", email = "mohghq@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
]

[project.scripts]
pyexpl = "pyexpl:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
